tests/baselines/reference/contextuallyTypeLogicalAnd02.errors.txt
tests/cases/conformance/types/contextualTypes/logicalAnd/contextuallyTypeLogicalAnd02.ts(4,1): error TS2322: Type '(a: any) => number' is not assignable to type '(a: string) => string'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/types/contextualTypes/logicalAnd/contextuallyTypeLogicalAnd02.ts (1 errors) ====
    let x: (a: string) => string;
    let y = true;
    
    x = y && (a => {
    ~
!!! error TS2322: Type '(a: any) => number' is not assignable to type '(a: string) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
        const b: number = a;
        return b;
    });